# simulation-framework

./: .gitignore  CMakeLists.txt  GlidingRectangles.cpp  GlidingRectangles.h  README.md  main.cpp
include/: Initializer.h  Renderer.h  Simulation.h  Window.h  sf.h  simulation_framework.h
include/display/: RGBA.h  Rect.h  Renderer.h  RendererFlags.h  Window.h  WindowFlags.h
include/enums/: SubSystems.h
include/event/: Event.h  EventDispatcher.h  EventType.h
src/: Initializer.cpp  RGBA.cpp  Rect.cpp  Renderer.cpp  Simulation.cpp  Window.cpp  simulation_framework.cpp
src/display/: RGBA.cpp  Rect.cpp  Renderer.cpp  Window.cpp
src/event/: Event.cpp  EventDispatcher.cpp
